--- a/index.html
+++ b/index.html
@@ -5,27 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fdnd-crud-form</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
-        <h1>fdnd-crud-API</h1>
+        <h1>FDND-Crud-API</h1>
     </header>
     <main>
+        
         <form>
-            <label for="name">Name</label>
-            <input type="text" id="name">
+              <h3>Voeg Member Toe</h3>
+              <label for="squad">Squad ID</label>
+              <input type="text" id="squad">
 
-            <label for="surname">Surname</label>
-            <input type="text" id="surname">
+              <label for="name">Name</label>
+              <input type="text" id="name">
 
-            <label for="avatar">Avatar</label>
-            <input type="text" id="avatar">
+              <label for="surname">Surname</label>
+              <input type="text" id="surname">
 
-            <label for="url">Url</label>
-            <input type="text" id="url">
+              <label for="avatar">Avatar</label>
+              <input type="url" id="avatar">
+
+              <label for="url">Url</label>
+              <input type="url" id="url">
             
-            <input type="text">
+             <input type="submit" value="submit"    id="btn__submit">
         </form>
+
+        <section class="update__information">
+           <h2>Update Informatie</h2>
+        </section>
 
 
     </main>
