--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fdnd-crud-form</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="/scripts/main.js"></script>
 </head>
 <body>
     <header>
@@ -33,8 +34,12 @@
              <input type="submit" value="submit"    id="btn__submit">
         </form>
 
-        <section class="update__information">
-           <h2>Update Informatie</h2>
+        <section class="posts__list">
+           
+            <article >
+                <h2>Updating informatie</h2>
+ 
+            </article>
         </section>
 
 
