--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>fdnd-crud-form</title>
     <link rel="stylesheet" href="styles/style.css">
     <script defer src="scripts/main.js"></script>
-    <script defer  src="/scripts/post.js"></script>
+    <!-- <script defer  src="/scripts/post.js"></script> -->
 </head>
 <body>
     <header>
@@ -16,7 +16,7 @@
     </header>
     <main>
         
-        <form id="memberform" action="https://tribe.api.fdnd.nl/v1/member" method="post">
+        <form id="memberForm"  action= https://tribe.api.fdnd.nl/v1/member  method="post">
 
             <fieldset id="member">
 
