--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>fdnd-crud-form</title>
     <link rel="stylesheet" href="styles/style.css">
     <script defer src="scripts/main.js"></script>
-    <!-- <script defer  src="/scripts/post.js"></script> -->
+    <script defer  src="/scripts/post.js"></script>
 </head>
 <body>
     <header>
@@ -27,15 +27,15 @@
               <label for="memberId"> Member Id</label>
               <input type="number" id="memberId">
 
-              <label for="squad">Squad ID</label>
-              <input type="number" id="squad">
+              <label for="squadId">Squad ID</label>
+              <input type="number" id="squadId">
 
               <label for="type">Type</label>
               <input type="text" id="type">
 
 
-              <label for="nickName">NickName</label>
-              <input type="text" id="nickName">
+              <label for="nickname">NickName</label>
+              <input type="text" id="nickname">
 
               <label for="prefix">Prefix</label>
               <input type="text" id="Prefix">
